--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.jizerotodo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-      android:name=".MainApplication"
+      android:name="com.jizerotodo.MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
@@ -11,10 +11,10 @@
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
       <activity
-        android:name=".MainActivity"
+        android:name="com.jizerotodo.MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-        android:launchMode="singleTask"
+        android:launchMode="standard"
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
@@ -23,4 +23,5 @@
         </intent-filter>
       </activity>
     </application>
+    
 </manifest>
