--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -21,7 +21,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-
+android.enableJetifier=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
@@ -36,4 +36,14 @@ newArchEnabled=true
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
-hermesEnabled=true
+#hermesEnabled=true
+
+hermesEnabled=false
+org.gradle.java.home=C:/Program Files/Eclipse Adoptium/jdk-17.0.13.11-hotspot
+
+#android.defaults.buildfeatures.buildconfig=true
+
+ MYAPP_RELEASE_STORE_FILE=C:/Users/gy411/keystore/my-release-key.jks
+ MYAPP_RELEASE_KEY_ALIAS=key0
+ MYAPP_RELEASE_STORE_PASSWORD=${MYAPP_RELEASE_STORE_PASSWORD}
+ MYAPP_RELEASE_KEY_PASSWORD=${MYAPP_RELEASE_KEY_PASSWORD}
