--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native/gradle-plugin": "^0.76.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-checkbox": "^2.0.0",
@@ -33,6 +34,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
