이중스플래시 문제 해결

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="standard"
         android:windowSoftInputMode="adjustResize"
-        android:theme="@android:style/Theme.NoDisplay"
+          android:theme="@style/AppTheme"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
