--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:8.0.0")
         classpath("com.facebook.react:react-native-gradle-plugin")
         // classpath('org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.24')
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
@@ -22,6 +22,12 @@ buildscript {
 
 }
 
+allprojects {
+    repositories {
+        google() // Google의 라이브러리를 사용하는 경우
+        mavenCentral() // Maven Central에서 라이브러리를 찾을 경우
+    }
+}
 
 apply plugin: "com.facebook.react.rootproject"
 //apply plugin: "com.android.application"
