--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,8 +87,8 @@ android {
         applicationId "com.jizerotodo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 18
-        versionName "1.1.6"
+        versionCode 22
+        versionName "1.1.8"
         buildConfigField "boolean", "IS_HERMES_ENABLED", "false"
     }
 compileOptions {
@@ -148,13 +148,11 @@ dependencies {
     implementation project(':react-native-vector-icons')
 // SplashScreen 의존성 추가
     implementation 'androidx.core:core-splashscreen:1.0.1'
+    implementation 'com.google.android.gms:play-services-ads:23.6.0'
 
 
-// implementation platform('com.google.firebase:firebase-bom:33.9.0')
-// implementation 'com.google.firebase:firebase-analytics'
-     implementation 'com.google.android.gms:play-services-ads:23.6.0'
+  implementation 'com.google.firebase:firebase-analytics:21.0.0' //추가
 
-    // implementation 'com.google.firebase:firebase-analytics:21.0.0'
 
 }
 
